# Tutorfish_Glasses_App

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
audio_source_files/: look_at_your_question_00.h  look_at_your_question_01.h  p_00.h  submit_a_question_00.h  taking_a_picture321_02.h  the_camera_take_a_pic_00.h  the_camera_take_a_pic_01.h  to_conserve_battery_00.h  to_conserve_battery_01.h  to_hear_the_answer_again_00.h  tutor_fish_settings_00.h  tutors_found_answer_00.h  tutors_look_for_answer_00.h  uploading_the_picture_please_wait_00.h  welcome_to_tutor_fish_01.h
main/: CMakeLists.txt  Kconfig.projbuild  audio_io.c  blue_led.c  camera.c  esp_http_client_example.c  esp_ota.c  home_button.c  http_request.c  http_request_tf.c  littlefs_helper.c  main.c  menu.c  nvs.c  red_wht_led.c  touch.c  websocket.c  wifi_station.c
main/drivers/: audio_io.c
main/helpers/: littlefs_helper.c  littlefs_helper.h
main/include/: audio_io.h  blue_led.h  camera.h  esp_http_client_example.h  esp_ota.h  home_button.h  http_request.h  init_variables.h  menu.h  nvs.h  nvs_data_struct.h  red_wht_led.h  state_machine.h  touch.h  websocket.h  wifi_bt_status.h  wifi_station.h
